# willvm

./: .clangd  .gitignore  CMakeLists.txt  README.md  willvm
docs/: Architecture.md  InstructionCode.md  MemoryModel.md
src/: main.cpp
src/vm/: vm.hpp
src/vm/cpu/: cpu.cpp  cpu.hpp  instructions.hpp
src/vm/cpu/alu/: alu.cpp  alu.hpp
src/vm/cpu/decoder/: decoder.cpp  decoder.hpp
src/vm/cpu/executer/: executer.cpp  executer.hpp
src/vm/cpu/pc/: pc.cpp  pc.hpp
src/vm/cpu/registers/: registers.cpp  registers.hpp
src/vm/cpu/timer/: timer.cpp  timer.hpp
src/vm/memory/: memory.cpp  memory.hpp
src/vm/memory/ram/: ram.cpp  ram.hpp
src/vm/memory/rom/: rom.cpp  rom.hpp
